<resources>
    <string name="app_name">NutritionTrackerAvg</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="this_is_a_required_field">This is a required field.</string>
    <string name="email_wrong_info">Email in wrong format</string>
    <string name="username_wrong_info">Username should have at least 3 characters</string>
    <string name="password_wrong_info">Password should not have any special characters (~#^|$%&amp;*!), should be of length >= 5, with at least one capital letter and at least one digit</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="all_meals">All meals</string>
    <string name="my_meals">My meals</string>
    <string name="profile">Profile</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="statistics">Statistics</string>
    <string name="item_not_available">Not available</string>
    <string name="quit">quit</string>
    <string name="save">save</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="photo_button">Take photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_by">Filter by</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="filter_by_area">Filter by Area</string>
    <string name="filter_by_ingredient">Filter by ingredient</string>
    <string name="remove_filter">Remove filter</string>
    <string name="search_by_tag">Search by Tag</string>
    <string name="search_by_name">Search by Name</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="update_password">Update password</string>
    <string name="invalid_old_password">Invalid old password</string>
    <string name="invalid_new_password">Invalid new password</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="empty_fields">Empty fields!</string>
    <string name="passwords_cannot_be_the_name">Passwords cannot be the same!</string>
    <string name="give_up">Give up</string>

    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>