<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activities.ActivityLoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minHeight="60dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
        <TextView
            android:id="@+id/email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_a_required_field"
            android:textColor="@color/red_error"
            android:layout_gravity="center"
            android:visibility="gone" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:layout_margin="10dp"
            android:hint="@string/username"
            android:inputType="textPersonName" />
        <TextView
            android:id="@+id/username_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_a_required_field"
            android:textColor="@color/red_error"
            android:layout_gravity="center"
            android:visibility="gone" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <TextView
            android:id="@+id/password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_a_required_field"
            android:textColor="@color/red_error"
            android:layout_gravity="center"
            android:visibility="gone" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="150dp"
            android:text="@string/login" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>