<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.fragments.TabPlanOverviewFragment">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Plan Overview"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/savePlanBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="Save Plan" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="vertical">
            <TextView

                android:id="@+id/mondayTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:background="?colorTertiary"

                android:textSize="20sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listRvMonday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:clipToPadding="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"

            android:orientation="vertical">
            <TextView
                android:id="@+id/tuesdayTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:background="?colorTertiary"

                android:textSize="20sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listRvTuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:clipToPadding="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"

            android:orientation="vertical">
            <TextView
                android:id="@+id/fridayTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorTertiary"
                android:text="@string/friday"
                android:textSize="20sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listRvFriday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:clipToPadding="false"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>